[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
    'meson>=1.2.3',
    'setuptools>=45',
    'wheel',
    'setuptools_scm'
]

[project]
name = 'PyORBIT'
dynamic = ['version']
description = 'Use meson-python to build C++ and Python modules with Meson.'
requires-python = '>=3.9'
authors = [
  {name = 'Alexander Zhukov', email = 'zhukovap@ornl.gov'},
]
